--- a/assignments/classification/Blood Transfusion.ipynb
+++ b/assignments/classification/Blood Transfusion.ipynb
@@ -278,6 +278,7 @@
    "metadata": {},
    "source": [
     "### What to do after completing the assignment\n",
+    "* Press ctrl+s to save your progress\n",
     "* Click on 'share' at the top right corner.\n",
     "* Enter these two email ids *upman16@gmail.com* and *kshitij.karthick@gmail.com*\n",
     "* Click on done."
