Fix Housing and Mushrooms assignments

--- a/assignments/classification/Mushrooms.ipynb
+++ b/assignments/classification/Mushrooms.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question**: Enter the names of the names of the students in your team."
+    "**Question**: Enter the names of the students in your team."
    ]
   },
   {
@@ -152,6 +152,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Since some of the columns are Categorical data, we have to use label encoding to represent them as numbers\n",
+    "\n",
+    "Read more about this topic here: http://pbpython.com/categorical-encoding.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "for column_name in X.columns:\n",
+    "    if X[column_name].dtype == object:\n",
+    "        X[column_name] = le.fit_transform(X[column_name])\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -211,29 +237,8 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "##TODO run the accuracy_score function with y_test and y_pred variables as arguments to measure the accuracy of our classifier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Random Forest Classifier\n",
-    "Train a random forest classifier on the same data and run the predict and accuracy_score functions again to see if the accuracy increases\n",
-    "\n",
-    "\n",
-    "Documentation and example: http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "## TODO "
    ]
   },
   {
