Fix employee salary assignment

--- a/assignments/regression/employee_salary.ipynb
+++ b/assignments/regression/employee_salary.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Employee Salary Prediction\n",
     "\n",
-    "This project deals with predicting salary given years of experience. Here is a link to a detailed description of the data set. \n",
+    "This project deals with predicting salary given years of experience.\n",
     "\n",
     "### Instructions\n",
     "* There follows a series of questions and tasks.\n",
