Fix white wine quality assignment

--- a/assignments/regression/white_wine_quality.ipynb
+++ b/assignments/regression/white_wine_quality.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Red Wine Quality Prediction\n",
+    "## White Wine Quality Prediction\n",
     "\n",
     "This project deals with predicting the quality of red wine, given features such as pH and residual sugar level. Here is a link to a detailed description of the data set. \n",
     "\n",
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Load the titanic dataset using Pandas library \n",
-    "df = pd.read_csv('../../data/assignment/winequality-red.csv')\n",
+    "df = pd.read_csv('../../data/assignment/winequality-white.csv')\n",
     "\n",
     "# TODO: use df.head() to display the first 5 rows of the data set"
    ]
