Fix all regression assignments

--- a/assignments/regression/white_wine_quality.ipynb
+++ b/assignments/regression/white_wine_quality.ipynb
@@ -19,6 +19,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question**: Enter the names of the names of the students in your team."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer**: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Clone the workshop repository to access the data sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/KshitijKarthick/reva_ml_workshop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import all the libraries that you will use for the task"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -72,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Load the titanic dataset using Pandas library \n",
-    "df = pd.read_csv('../../data/assignment/winequality-white.csv')\n",
+    "df = pd.read_csv('reva_ml_workshop/data/assignment/winequality-white.csv')\n",
     "\n",
     "# TODO: use df.head() to display the first 5 rows of the data set"
    ]
@@ -235,14 +274,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select one of the followeing Machine Learning Models\n",
-    "    * http://scikit-learn.org/stable/modules/ensemble.html#regression\n",
-    "    * http://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPRegressor.html#sklearn.neural_network.MLPRegressor\n",
-    "    * http://scikit-learn.org/stable/modules/tree.html#regression\n",
-    "    * http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDRegressor.html#sklearn.linear_model.SGDRegressor\n",
-    "    * http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVR.html#sklearn.svm.LinearSVR\n",
-    "    * http://scikit-learn.org/stable/modules/linear_model.html#ridge-regression\n",
-    "* Find one that reduces the root mean squared error\n"
+    "### Select one of the below Machine Learning Models and train such that the root mean square error reduces further\n",
+    "* http://scikit-learn.org/stable/modules/ensemble.html#regression\n",
+    "* http://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPRegressor.html#sklearn.neural_network.MLPRegressor\n",
+    "* http://scikit-learn.org/stable/modules/tree.html#regression\n",
+    "* http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDRegressor.html#sklearn.linear_model.SGDRegressor\n",
+    "* http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVR.html#sklearn.svm.LinearSVR\n",
+    "* http://scikit-learn.org/stable/modules/linear_model.html#ridge-regression\n"
    ]
   },
   {
