--- a/assignments/regression/employee_salary.ipynb
+++ b/assignments/regression/employee_salary.ipynb
@@ -107,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/assignment/salary_dataset.csv')\n",
+    "df = pd.read_csv('reva_ml_workshop/data/assignment/salary_dataset.csv')\n",
     "# TODO: use df.head() to display the first 5 rows of the data set"
    ]
   },
@@ -259,15 +259,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Select one of the below Machine Learning Models\n",
-    "    * http://scikit-learn.org/stable/modules/ensemble.html#regression\n",
-    "    * http://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPRegressor.html#sklearn.neural_network.MLPRegressor\n",
-    "    * http://scikit-learn.org/stable/modules/tree.html#regression\n",
-    "    * http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDRegressor.html#sklearn.linear_model.SGDRegressor\n",
-    "    * http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVR.html#sklearn.svm.LinearSVR\n",
-    "    * http://scikit-learn.org/stable/modules/linear_model.html#ridge-regression\n",
-    "\n",
-    "* Build a model to reduce the Root Mean Squared Error further "
+    "### Select one of the below Machine Learning Models and train such that the root mean square error reduces further\n",
+    "* http://scikit-learn.org/stable/modules/ensemble.html#regression\n",
+    "* http://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPRegressor.html#sklearn.neural_network.MLPRegressor\n",
+    "* http://scikit-learn.org/stable/modules/tree.html#regression\n",
+    "* http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.SGDRegressor.html#sklearn.linear_model.SGDRegressor\n",
+    "* http://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVR.html#sklearn.svm.LinearSVR\n",
+    "* http://scikit-learn.org/stable/modules/linear_model.html#ridge-regression"
    ]
   },
   {
