Remove sub dir. Add helpful note to mall customer clustering assignment.

--- a/assignments/clustering/mall_customers.ipynb
+++ b/assignments/clustering/mall_customers.ipynb
@@ -223,7 +223,9 @@
    "metadata": {},
    "source": [
     "### Use the DB Scan clustering algorithm to cluster the same data set\n",
-    "Documentation and example: http://scikit-learn.org/stable/auto_examples/cluster/plot_dbscan.html#sphx-glr-auto-examples-cluster-plot-dbscan-py"
+    "Documentation and example: http://scikit-learn.org/stable/auto_examples/cluster/plot_dbscan.html#sphx-glr-auto-examples-cluster-plot-dbscan-py\n",
+    "\n",
+    "**NOTE**: The example creates it's own dataset using the make_blobs function. Skip this step in your implementation."
    ]
   },
   {
