--- a/private_nbs/ml_classification/Titanic - Decision Tree.ipynb
+++ b/private_nbs/ml_classification/Titanic - Decision Tree.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,17 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a Decision Tree, with a max depth of 3 levels.\n",
-    "clf = tree.DecisionTreeClassifier(random_state=42, max_depth=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,21 +253,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Decision Tree, with a max depth of 3 levels.\n",
+    "clf = tree.DecisionTreeClassifier(random_state=42 max_depth=7, min_samples_leaf=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=4,\n",
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=7,\n",
        "                       max_features=None, max_leaf_nodes=None,\n",
        "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_samples_leaf=4, min_samples_split=2,\n",
        "                       min_weight_fraction_leaf=0.0, presort=False,\n",
-       "                       random_state=42, splitter='best')"
+       "                       random_state=49, splitter='best')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Decision Tree: 76.22\n",
+      "Accuracy of Decision Tree: 81.82\n",
       "Accuracy of Smart Classifier: 73.43\n"
      ]
     }
@@ -307,13 +307,15 @@
     "    accuracy_score(y_test, clf.predict(X_test_scaled)) * 100.0\n",
     "))\n",
     "print(\"Accuracy of Smart Classifier: {:.2f}\".format(\n",
-    "    accuracy_score(y_test, [z[1] > 0 for z in X_test_scaled]) * 100.0\n",
+    "    accuracy_score(y_test, [z[1] >\n",
+    "                            \n",
+    "                            0 for z in X_test_scaled]) * 100.0\n",
     "))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -342,27 +344,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0.190210</th>\n",
+       "      <th>0.165183</th>\n",
        "      <td>Pclass</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.596006</th>\n",
+       "      <th>0.517587</th>\n",
        "      <td>Sex</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.142766</th>\n",
+       "      <th>0.172668</th>\n",
        "      <td>Age</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.031953</th>\n",
+       "      <th>0.035574</th>\n",
        "      <td>SibSp</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.006778</th>\n",
+       "      <th>0.019375</th>\n",
        "      <td>Parch</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.032288</th>\n",
+       "      <th>0.089613</th>\n",
        "      <td>Fare</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -371,15 +373,15 @@
       ],
       "text/plain": [
        "               0\n",
-       "0.190210  Pclass\n",
-       "0.596006     Sex\n",
-       "0.142766     Age\n",
-       "0.031953   SibSp\n",
-       "0.006778   Parch\n",
-       "0.032288    Fare"
+       "0.165183  Pclass\n",
+       "0.517587     Sex\n",
+       "0.172668     Age\n",
+       "0.035574   SibSp\n",
+       "0.019375   Parch\n",
+       "0.089613    Fare"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +478,7 @@
        "       3       0.150198"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,6 +487,13 @@
     "# MultiLevel Survival Rate\n",
     "df.pivot_table(index=['Sex', 'Pclass'], values=['Survived'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -503,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
