--- a/private_nbs/ml_classification/Titanic - Random Forest.ipynb
+++ b/private_nbs/ml_classification/Titanic - Random Forest.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a Decision Tree, with a max depth of 3 levels.\n",
-    "clf = ensemble.RandomForestClassifier(random_state=42, n_estimators=200)"
+    "clf = ensemble.RandomForestClassifier(random_state=42, n_estimators=115)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,8 +276,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 205,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -296,84 +298,6 @@
     "print(\"Accuracy of Smart Classifier: {:.2f}\".format(\n",
     "    accuracy_score(y_test, [z[1] > 0 for z in X_test_scaled]) * 100.0\n",
     "))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0.086815</th>\n",
-       "      <td>Pclass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.268471</th>\n",
-       "      <td>Sex</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.291581</th>\n",
-       "      <td>Age</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.043064</th>\n",
-       "      <td>SibSp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.037959</th>\n",
-       "      <td>Parch</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.272111</th>\n",
-       "      <td>Fare</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               0\n",
-       "0.086815  Pclass\n",
-       "0.268471     Sex\n",
-       "0.291581     Age\n",
-       "0.043064   SibSp\n",
-       "0.037959   Parch\n",
-       "0.272111    Fare"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Plot the features the decision tree found important\n",
-    "pd.DataFrame(['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare'], clf.feature_importances_)"
    ]
   },
   {
@@ -407,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
